# SocIP_Scenario_Manager

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  cli.py  pyproject.toml  requirements.txt
docs/: index.html
docs/scenarios/: uhd30_video_recording.html
docs/scenarios/projectA/: uhd30_video_recording.html  video_playback_8k30.html  video_playback_fhd30.html  video_playback_uhd30.html  video_recording_8k30.html  video_recording_fhd30.html  video_recording_fhd60.html  video_recording_uhd30.html  video_recording_uhd60.html  youtube_playback_8k30.html  youtube_playback_fhd30.html  youtube_playback_uhd30.html
patches/: 0001-Add-C-L-R-badge-overlays-to-buffer-and-HW-IP-nodes.patch  0001-Add-DPU-composition-panel-visual-polish-split-UI-buf.patch  0001-Add-compact_pipeline-YAML-authoring-syntax.patch  0002-Fix-overlapping-arrows-add-GPU-UI-composition-layer.patch  0003-Stagger-hw-memory-single-node-y-positions-by-generat.patch  data_flow_animation.patch  layout-grid-dynamic.patch
scenarios/traces/uhd30_recording/: l2_ip_activity.yaml  l3_bus_memory.yaml
scenarios/usecase/: uhd30_recording.yaml  uhd30_recording_compact.yaml
scenarios/usecase/projectA/: dual_camera_npu_recording.yaml  video_playback.yaml  video_recording.yaml  youtube_playback.yaml
src/mmscenario/: __init__.py
src/mmscenario/dag/: __init__.py  pipeline.py
src/mmscenario/perfetto/: __init__.py  parser.py  queries.py
src/mmscenario/schema/: __init__.py  compact.py  loader.py  models.py  validator.py
src/mmscenario/view/: __init__.py  data_prep.py  renderer.py  site.py
(+4 files in other folders)
